Wprowadzony listview, baza pod wykres

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -16,40 +16,20 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="30°C"
         android:id="@+id/textView"
-        android:textSize="40dp"
+        android:textSize="35dp"
         android:layout_column="3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignTop="@+id/textView3"
+        android:layout_alignParentEnd="true"
+        android:screenOrientation="portrait"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="30°C"
-        android:id="@+id/textView2"
-        android:textSize="40dp"
-        android:layout_column="28"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Podwórko"
+        android:text="Dom ESP8266"
         android:id="@+id/textView3"
-        android:textSize="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Strych"
-        android:id="@+id/textView4"
-        android:textSize="40dp"
-        android:layout_below="@+id/button2"
+        android:textSize="35dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -58,44 +38,39 @@
         android:text="Synchronizuj"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="sync"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Wykres"
         android:id="@+id/button2"
-        android:layout_below="@+id/textView5"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/button3" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/textView3"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wykres"
+        android:text="LISTA"
         android:id="@+id/button3"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Ostatni pomiar: 13:50 29.06.2016r."
-        android:id="@+id/textView5"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentStart="true"
-        android:textSize="20dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Ostatni pomiar: 13:43 29.06.2016r."
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentStart="true"
-        android:textSize="20dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/button"
+        android:onClick="lista"/>
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:id="@+id/graph"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
